fix: participant repo performance improved